--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 
 DJANGO_SECRET_KEY=replace-me-with-a-secure-secret
-DJANGO_DEBUG=True
+DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
 
@@ -31,8 +31,8 @@ INVOICE_DUE_DAYS=30
 
 
 
-GROQ_API_KEY=youcanseeshithere
-GROQ_MODEL=llama3-70b-8192
+GROQ_API_KEY=you_cant_see_shit_here
+AI_ADVISORY_ENABLED=true
 
 
 
